fixed some spacing issues

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -96,18 +96,19 @@ main{
 
 #calculator{
     text-align: center;
-    padding: 20px;
-    margin-top: 20px;
+    padding: 5px;
+    margin-top: 1px;
 }
 #calculator input{
+    font-size: calc(12px + 0.8vw);
     text-align: center;
     border: 1px solid #4A90E2;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 #buttons button {
-    width: 50px;
-    height: 40px;
-    font-size: 18px;
+    width: 40px;
+    height: 30px;
+    font-size: 10px;
     margin: 5px;
     cursor: pointer;
     border: none;
